# CxxMPI_University_Tasks

.github/workflows/: cmake.yml
fifth/: CMakeLists.txt  main.cpp
first/: README.md  main.cpp
fourth/: BinaryRoutes.h  CMakeLists.txt  main.cpp
fourth/lib/: CMakeLists.txt
second/: main.cpp
third/: CMakeLists.txt  main.cpp
third/lib/: MPI_State.h
